--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title id="pageTitle"></title>
+        <title id="pageTitle">Data not loeaded.</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
@@ -45,6 +45,7 @@
         <script>
             // Current match index (global)
             var currentMatch = undefined;
+            let projectName = "No data loaded.";
 
             // Check whether data is already in localStorage
             const initCurrentMatch = function() {
@@ -52,6 +53,8 @@
                 if (data != null) {
                     document.getElementById('browserTimestamp').innerHTML = `<b>Last change: </b> ${data['lastChange']}`;
                     document.getElementById('downloadTimestamp').innerHTML = `<b>Last download: </b> ${data['lastDownload']}`;
+                    projectName = data['project'];
+                    document.getElementById('pageTitle').innerHTML = projectName;
                     // Look for latest unanswered question
                     for (currentMatch = 0; currentMatch < data['numberOfMatches']; currentMatch++) {
                         if (data['answer'][currentMatch] < 0) {
@@ -75,9 +78,6 @@
                 showQuestion(currentMatch);
             }
 
-            // Project name ensures people can use multiple questionaires on one computer/browser
-            const projectName = "Radina2024";
-            document.getElementById('pageTitle').innerHTML = projectName;
             initCurrentMatch();
             
             document.getElementById('import').onclick = function() {
@@ -176,7 +176,7 @@
                                         </label>
                                     </div>`;
                 }
-                if (data['answer'][currentMatch] == -1 || data['answer'][currentMatch] == (data['data'].length + 1)) {
+                if (data['answer'][currentMatch] == -1 || data['answer'][currentMatch] == (data['data'][currentMatch].length)) {
                     isChecked = ' checked';
                 } else {
                     isChecked = '';
