--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title id="pageTitle">Data not loeaded.</title>
+        <title id="pageTitle">Data not loaded.</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
@@ -45,8 +45,13 @@
         <script>
             // Current match index (global)
             var currentMatch = undefined;
-            let projectName = "No data loaded.";
 
+            // Set projectName, if available
+            let projectName = localStorage.getItem("manual-matcher-project");
+            if (projectName == null) {
+                projectName = "Unloaded";
+            }
+            
             // Check whether data is already in localStorage
             const initCurrentMatch = function() {
                 data = JSON.parse(localStorage.getItem(projectName));
@@ -54,6 +59,7 @@
                     document.getElementById('browserTimestamp').innerHTML = `<b>Last change: </b> ${data['lastChange']}`;
                     document.getElementById('downloadTimestamp').innerHTML = `<b>Last download: </b> ${data['lastDownload']}`;
                     projectName = data['project'];
+                    localStorage.setItem("manual-matcher-project", projectName);
                     document.getElementById('pageTitle').innerHTML = projectName;
                     // Look for latest unanswered question
                     for (currentMatch = 0; currentMatch < data['numberOfMatches']; currentMatch++) {
